--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "auth": "^1.2.3",
+    "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
+    "newsapi": "^2.4.1",
     "next": "15.2.0",
     "next-auth": "5.0.0-beta.25",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.86.2",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
