--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
+    "fs": "^0.0.1-security",
     "newsapi": "^2.4.1",
     "next": "15.2.0",
     "next-auth": "5.0.0-beta.25",
