--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.5",
     "@heroicons/react": "^2.2.0",
     "auth": "^1.2.3",
     "axios": "^1.8.1",
