--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.1",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark": "^15.0.1",
