--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "rehype-sanitize": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
+    "yahoo-finance2": "^2.13.3",
+    "yfinance": "^0.0.6",
     "zod": "^3.24.2"
   },
   "devDependencies": {
