--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "fs": "^0.0.1-security",
+    "install": "^0.13.0",
     "newsapi": "^2.4.1",
     "next": "15.2.0",
     "next-auth": "5.0.0-beta.25",
     "node-fetch": "^3.3.2",
+    "npm": "^11.2.0",
     "openai": "^4.86.2",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.1",
     "react-router-dom": "^7.3.0",
+    "react-table": "^7.8.0",
     "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
